--- a/sass/partials/_theme-default.scss
+++ b/sass/partials/_theme-default.scss
@@ -303,6 +303,10 @@ input.theme-btn {
   &.style-3 {
     background-color: $primary-color;
     color: $white;
+    border-color: transparent;
+    &:after {
+      background-color: transparent;
+    }
   }
 }
 
