--- a/sass/pages/_home-one.scss
+++ b/sass/pages/_home-one.scss
@@ -425,6 +425,9 @@
     @include xl {
       gap: 40px;
     }
+    @include rmaxwd(991) {
+      gap: 10px;
+    }
   }
   .btn-wrapper {
     .inner-wrapper {
@@ -615,7 +618,7 @@
     }
   }
   .blog-card {
-    @include md {
+    @include rmaxwd(991) {
       margin-top: 30px;
     }
   }
@@ -875,6 +878,10 @@
       @include rmaxwd(1199) {
         justify-content: start;
         margin-top: 30px;
+        gap: 40px;
+      }
+      @include rmaxwd(991) {
+        gap: 30px;
       }
     }
     .about-image-card {
@@ -888,10 +895,13 @@
         @include rmaxwd(1399) {
           transform: translateX(11%);
         }
+        @include rmaxwd(1199) {
+          transform: translateX(0);
+        }
       }
       .inner-wrapper {
         position: relative;
-        width: 166px;
+        width: 146px;
         height: 2px;
         background-color: $black;
 
