--- a/sass/modules/about-image-card/_about-image-card-one.scss
+++ b/sass/modules/about-image-card/_about-image-card-one.scss
@@ -10,6 +10,10 @@
         @include rmaxwd(1550) {
           margin-left: 50px;
         }
+        @include rmaxwd(991) {
+          width: 390px;
+          height: 500px;
+        }
         img {
           width: 100%;
           height: 100%;
@@ -48,6 +52,10 @@
           display: flex;
           align-items: center;
           justify-content: center;
+          @include rmaxwd(991) {
+            width: 80px;
+            height: 80px;
+          }
           i {
             color: $white;
           }
