--- a/sass/modules/blog-card/_blog-card.scss
+++ b/sass/modules/blog-card/_blog-card.scss
@@ -57,6 +57,10 @@
           font-size: 20px;
           line-height: 30px;
         }
+        @include rmaxwd(991) {
+          font-size: 25px;
+          line-height: 30px;
+        }
       }
     }
     .desc {
@@ -134,6 +138,7 @@
       .title-wrapper {
         margin-left: 0;
         margin-top: 25px;
+        padding: 0;
         .desc {
           visibility: visible;
           opacity: 1;
@@ -157,11 +162,18 @@
       position: absolute;
       bottom: 40px;
       left: 40px;
+      @include sm {
+        bottom: 20px;
+        left: 20px;
+        padding: 20px;
+        max-width: 80%;
+      }
       .title-wrapper {
         margin-left: 0;
         margin-top: 0;
         background-color: transparent;
         box-shadow: none;
+        padding: 0;
         .desc {
           visibility: visible;
           opacity: 1;
