--- a/sass/modules/icon-card/_icon-card.scss
+++ b/sass/modules/icon-card/_icon-card.scss
@@ -3,9 +3,11 @@
     display: flex;
     align-items: center;
     gap: 25px;
-
+    @include rmaxwd(991) {
+      gap: 12px;
+    }
     .icon-divider {
-      content: "";
+      content: '';
       width: 1px;
       background-color: $primary-color;
       position: relative;
@@ -13,7 +15,7 @@
       align-self: stretch;
 
       &::before {
-        content: "";
+        content: '';
         position: absolute;
         top: -8px;
         left: -5px;
@@ -23,7 +25,7 @@
         background-color: $primary-color;
       }
       &::after {
-        content: "";
+        content: '';
         position: absolute;
         bottom: -8px;
         left: -5px;
