--- a/sass/modules/image-card/_image-card.scss
+++ b/sass/modules/image-card/_image-card.scss
@@ -3,6 +3,12 @@
   position: relative;
   max-width: 450px;
   max-height: 506px;
+  width: 100%;
+  height: 100%;
+  @include rmaxwd(991) {
+    max-width: unset;
+    max-height: unset;
+  }
   &:hover {
     .content-wrapper {
       visibility: visible;
@@ -72,6 +78,12 @@
       border-top: 1px solid #878080;
       border-bottom: 1px solid #878080;
       position: relative;
+      @include lg {
+        padding: 30px 32px;
+      }
+      @include md {
+        padding: 30px 32px;
+      }
       &:before {
         content: '';
         position: absolute;
