--- a/sass/pages/_home-two.scss
+++ b/sass/pages/_home-two.scss
@@ -341,6 +341,9 @@
       }
     }
     .project-slider {
+      @include rmaxwd(1199) {
+        margin-top: 30px;
+      }
       .project-arrow-btn {
         position: absolute;
         top: 50%;
@@ -371,6 +374,9 @@
         }
         &.next-btn {
           right: -32%;
+          @include rmaxwd(991) {
+            right: 0;
+          }
         }
       }
     }
@@ -395,6 +401,8 @@
     background-position: center;
     background-size: cover;
     .subscribe-form-widget {
+      max-width: 451px;
+      width: 100%;
       height: 651px;
       background-color: $black;
       padding: 0 74px;
@@ -406,7 +414,6 @@
       gap: 20px;
       text-align: center;
       @include sm {
-        margin-top: 0;
         padding: 0 15px;
       }
       .short-title {
