--- a/sass/modules/testimonial-card/_testimonial-slider-card.scss
+++ b/sass/modules/testimonial-card/_testimonial-slider-card.scss
@@ -60,68 +60,67 @@
       }
     }
   }
-}
-
-// Slick dots style
-.slick-dots {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  margin: 40px 0 0;
-  @include sm {
-    padding-left: 0;
-  }
-  li {
-    list-style: none;
-    line-height: 0;
-
-    &:first-child {
-      button {
-        border-radius: 40px 0 0 40px;
-      }
+  // Slick dots style
+  .slick-dots {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin: 40px 0 0;
+    @include sm {
+      padding-left: 0;
     }
-    &:last-child {
-      button {
-        border-radius: 0 40px 40px 0;
-      }
-    }
-    &.slick-active {
-      button {
-        width: 105px;
-        @include transition;
+    li {
+      list-style: none;
+      line-height: 0;
 
-        &:before {
-          width: 100%;
-          visibility: visible;
-          @include transition;
+      &:first-child {
+        button {
+          border-radius: 40px 0 0 40px;
         }
       }
-    }
-
-    button {
-      width: 65px;
-      font-size: 0;
-      line-height: 0;
-      padding: 0;
-      background-color: $gray-200;
-      height: 11px;
-      @include transition;
-      @include sm {
-        width: 55px;
+      &:last-child {
+        button {
+          border-radius: 0 40px 40px 0;
+        }
       }
-      position: relative;
+      &.slick-active {
+        button {
+          width: 105px;
+          @include transition;
 
-      &:before {
-        position: absolute;
-        content: "";
-        top: 0;
-        left: 0;
-        width: 0;
-        height: 100%;
-        background-color: $primary-color;
-        visibility: hidden;
+          &:before {
+            width: 100%;
+            visibility: visible;
+            @include transition;
+          }
+        }
+      }
+
+      button {
+        width: 65px;
+        font-size: 0;
+        line-height: 0;
+        padding: 0;
+        background-color: $gray-200;
+        height: 11px;
         @include transition;
-        border-radius: 40px;
+        @include sm {
+          width: 55px;
+        }
+        position: relative;
+
+        &:before {
+          position: absolute;
+          content: '';
+          top: 0;
+          left: 0;
+          width: 0;
+          height: 100%;
+          background-color: $primary-color;
+          visibility: hidden;
+          @include transition;
+          border-radius: 40px;
+        }
       }
     }
   }
